--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "bootstrap": "^5.3.8"
+    "bootstrap": "^5.3.8",
+    "echarts": "^6.0.0"
   }
 }
